panel size tweaks

--- a/frontend/src/modules/object-panel/components/ObjectPanel/ObjectPanel.css
+++ b/frontend/src/modules/object-panel/components/ObjectPanel/ObjectPanel.css
@@ -20,7 +20,7 @@
   display: flex;
   align-items: center;
   padding: 10px 0px;
-  border-bottom: 1px solid var(--color-border);
+  background-color: var(--color-bg-secondary);
   flex-shrink: 0;
   position: relative;
 }
