--- a/frontend/src/shared/components/Tooltip.css
+++ b/frontend/src/shared/components/Tooltip.css
@@ -41,7 +41,7 @@
   font-size: 10px;
   font-style: normal;
   font-weight: 700;
-  cursor: help;
+  cursor: default;
   vertical-align: middle;
   line-height: 1;
   color: var(--color-text-tertiary);
